<resources>
    <string name="app_name">MapShare</string>
    <string name="button">Button</string>
    <string name="mapshare">MapShare</string>
    <string name="username">Username</string>
    <string name="currUsername">Viewing: %1$s\'s Maps</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="title_activity_maps">Map</string>
    <string name="creator">Creator</string>
    <string name="title">Title</string>
    <string name="date">date</string>
    <string name="title_create_map">Create New Map</string>
    <string name="enter_title">Enter Map Title</string>
    <string name="create_map">Create Map</string>
    <string name="write_description">Write Description</string>
    <string name="create">Create</string>
    <string name="number_created">Maps Created</string>
    <string name="maps_followed">Maps Followed</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="enter_a_description">Enter a description!</string>
    <string name="name_this_marker">Name this marker!</string>
    <string name="lat_with_param">Lat: %1$f</string>
    <string name="lon_with_param">Lon: %1$f</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="type_in_address">Type in Address</string>
    <string name="view_maps">View Maps</string>
    <string name="find_friends">Find Friends</string>
    <string name="enter_a_friend_s_username">Enter a friend\'s username (email included)</string>
    <string name="search">Search</string>
    <string name="followed">Followed</string>
    <string name="follow">Follow</string>
    <string name="save_map">Save Map</string>
    <string name="add_marker">Add Marker</string>
    <string name="upload_image">Upload Image</string>
    <string name="show_saved_maps">Show Saved Maps</string>
    <string name="choose_a_marker_color">Choose a Marker Color</string>
    <string name="customize_your_marker">Customize your Marker!</string>
    <string name="upload">Upload</string>
    <string name="remove">Remove</string>
    <string name="mapView_Save_Create">Saved</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="marker_color">Marker Color</string>
    <string name="your_network">Your Network</string>
    <string name="view_network">View Network</string>
    <string name="map_stats">Map Stats</string>
    <string name="network_stats">Network Stats</string>
</resources>
