<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profileBackground"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:id="@+id/blueBox"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_picture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/addFriendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/profilebuttonstyle_inverted"
        android:text="@string/follow"
        android:visibility="gone" />

    <TextView
        android:id="@+id/addFriendText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/followed"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:visibility="gone" />


    <android.support.v7.widget.CardView
        android:id="@+id/cardViewID"
        android:layout_width="250dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blueBox"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/cardViewID">

            <TextView
                android:id="@+id/map_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/map_stats"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/createdTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/map_stats"
                android:layout_alignParentStart="true"
                android:text="@string/number_created"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/num_maps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/createdTxt"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:text="5"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/followedTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/map_stats"
                android:layout_alignParentEnd="true"
                android:text="@string/maps_followed"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/num_followed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/followedTxt"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="40dp"
                android:text="6"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewMaps"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardViewID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp">

        <RelativeLayout
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/network_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/network_stats"
                android:textSize="20sp" />


            <TextView
                android:layout_below="@+id/network_stats"
                android:id="@+id/followerCountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:layout_alignParentStart="true"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/followerCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/followerCountText"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <TextView
                android:layout_below="@+id/network_stats"
                android:id="@+id/followingCountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/following"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/followingCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/followingCountText"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/viewMapsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/findFriendsBtn"
        android:layout_centerHorizontal="true"
        android:background="@drawable/profilebuttonstyle"
        android:text="@string/view_maps"
        android:textColor="#fff" />

    <Button
        android:id="@+id/findFriendsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/profilebuttonstyle"
        android:text="@string/view_network"
        android:textColor="#ffff"
        android:visibility="invisible" />

</RelativeLayout>
