<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".CreateAndEditMarkerActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/markerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_this_marker"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputLayoutTitle">

        <EditText
            android:id="@+id/markerDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_a_description"
            android:inputType="textLongMessage" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:paddingTop="10dp"
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputLayoutDesc"
        android:layout_centerHorizontal="true"
        android:weightSum="60">

        <at.markushi.ui.CircleButton
            android:id="@+id/searchBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="20"
            android:src="@drawable/search"
            app:cb_color="#FFFFFF" />

        <at.markushi.ui.CircleButton
            android:id="@+id/coordinatesBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="20"
            android:src="@drawable/lat_lon_globe"
            app:cb_color="#FFFFFF" />

        <at.markushi.ui.CircleButton
            android:id="@+id/currLocBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="20"
            android:src="@drawable/current_location"
            app:cb_color="#FFFFFF" />

    </LinearLayout>

    <RelativeLayout
        android:paddingTop="10dp"
        android:id="@+id/searchLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLayout"
        android:visibility="invisible">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etSearchTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_in_address" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/saveCbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etSearchTextInputLayout"
            android:layout_alignParentEnd="true"
            android:text="Save Coordinates" />

    </RelativeLayout>

    <RelativeLayout
        android:paddingTop="10dp"
        android:id="@+id/coordinatesLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLayout"
        android:visibility="invisible">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lonTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/markerLon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Longitude:" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/latTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lonTextInputLayout">

            <EditText
                android:id="@+id/markerLat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/markerLon"
                android:hint="Latitude:" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:paddingTop="10dp"
        android:id="@+id/currLocLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLayout"
        android:layout_centerHorizontal="true"
        android:visibility="invisible">

        <Button
            android:id="@+id/getCurrLocBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/get_current_location" />

        <TextView
            android:id="@+id/nearbyAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/getCurrLocBtn" />

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/uploadPhoto"
        android:layout_below="@+id/currLocLayout"
        android:layout_centerHorizontal="true"
        android:text="Upload"/>

    <TextView
        android:visibility="invisible"
        android:id="@+id/tvSavedLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvSavedLon"
        android:layout_alignParentStart="true"
        android:text="@string/lat_with_param" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/tvSavedLon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/lon_with_param" />

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@+id/uploadPhoto"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/CreateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/create" />

</RelativeLayout>